Update libraries in POM with version plugin